[package]
name = "lotus"
version = "0.1.0"
authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
lotus-common = { path = "./common" }
lotus-client = { path = "./client" }
lotus-server = { path = "./server" }
lotus-serializable = { path = "./serializable" }
lotus-serializable-macro = { path = "./serializable-macro" }
lotus-as-js-string-macro = { path = "./as-js-string-macro" }
lotus-parser = { path = "./parser" }
lotus-parsable = { path = "./parsable" }
lotus-parsable-macro = { path = "./parsable-macro" }