[package]
name = "lotus"
version = "0.1.0"
authors = ["Sylvain Milan <milan.sylvain@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
lotus-framework = { path = "./lotus-framework" }
lotus-parser = { path = "./lotus-parser" }
serializable = { path = "./serializable" }
serializable-macro = { path = "./serializable-macro" }
as-js-string-macro = { path = "./as-js-string-macro" }
parsable = { path = "./parsable" }
parsable-macro = { path = "./parsable-macro" }