[package]
name = "lotus-common"
version = "0.1.0"
edition = "2018"

[dependencies]
lotus-serializable-macro = { path = "../serializable-macro" }
lotus-as-js-string-macro = { path = "../as-js-string-macro" }
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }