[package]
name = "lotus-framework"
version = "0.1.0"
edition = "2018"

[dependencies]
serializable = { path = "../serializable" }
serializable-macro = { path = "../serializable-macro" }
enum-as-string-macro = { path = "../enum-as-string-macro" }
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha1 = "0.6"
base64 = "0.13"